k8s/manifests/network-system/traefik/static-routes/prusa/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prusa-mk3s
  namespace: network-system
  annotations:
    traefik.frontend.passHostHeader: "false"
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: network-system-rfc1918-ips@kubernetescrd
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "printer-3d-nozzle-outline"
    hajimari.io/appName: "prusa-mk3s"

spec:
  tls:
    - secretName: prusa-mk3s-${CLUSTER_NAME}-tls
      hosts:
        - "prusa-mk3s.${CLUSTER_DOMAIN}"

  rules:
    - host: prusa-mk3s.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prusa-mk3s
                port:
                  number: 80
